# swiftcfd

./: .gitignore  Dockerfile  LICENSE  README.md  bumpVersion.py  docker-compose.yml  fluxy.py  pyproject.toml  requirements.txt  swiftcfd.py
UML/: equations.uxf
fluxy/: __init__.py  field.py  mesh.py  output.py  parameters.py  time.py
fluxy/equations/: baseEquation.py  heatDiffusion.py
fluxy/equations/boundaryConditions/: cornerPoint.py  interfaceConditions.py
fluxy/equations/linearAlgebraSolver/: linearAlgebraSolver.py
fluxy/equations/numericalSchemes/: firstOrderEuler.py  (+2 more)
fluxy/field/: fieldManager.py
input/: bfs.toml  channel.toml  channel2blocks.toml  channel2blocksTemp.toml  config.toml  cylinder.toml  heatedCavity.toml  heatedCavitySingle.toml  heatedChannel.toml  lid.toml  suddenExpansion.toml
input/boundaryConditions/: heatedCavity.toml  heatedCavityDuo.toml  heatedCavitySingle.toml
input/mesh/: heatedCavity.toml  heatedCavityDuo.toml  heatedCavitySingle.toml
input/solver/: heatedCavity.toml  heatedCavityDuo.toml  heatedCavitySingle.toml
logo/: logo.psd
swiftcfd/: __init__.py  cla.py  enums.py  log.py  mesh.py  output.py  parameters.py  performanceStatistics.py  residuals.py  runtime.py  time.py
swiftcfd/equations/: baseEquation.py  equationFactory.py  heatDiffusion.py
swiftcfd/field/: field.py  fieldManager.py
swiftcfd/gradients/: firstOrderGradient.py
swiftcfd/machineLearning/: dataManager.py  trainingData.py
swiftcfd/output/: output.py
swiftcfd/solvers/: heatDiffusionSolver.py
tests/: test_linear_algebra_solver.py
(+33 files in other folders)
