[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftcfd"
version = "0.14.2"
description = "A package to solve 2D PDEs using implicit time integration"
authors = [
    { name = "Tom-Robin Teschner", email = "tom@cfd.university" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
